fix: padding on small displays

--- a/public/assets/css/components/bento.css
+++ b/public/assets/css/components/bento.css
@@ -10,7 +10,7 @@
 }
 
 .Bento-card {
-    padding: 40px;
+    padding: 35px;
     border-radius: 30px;
     background-color: var(--bento-background-color);
     background-size: cover;
